--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^4.4.3",
     "chartjs-adapter-date-fns": "^3.0.0",
     "core-js": "^3.8.3",
+    "date-fns": "^3.6.0",
     "moment": "^2.30.1",
     "vue": "^3.2.13",
     "vue-router": "^4.4.0"
